elasticsearch/pod.yaml
apiVersion: v1
kind: Pod
metadata:
    name: elasticsearch
    labels:
        app: elasticsearch
spec:
    containers:
        - name: elasticsearch
          image: gcr.io/practice-384108/elasticsearch:7.6.2
          imagePullPolicy: Always
          ports:
          - containerPort: 9200
