elasticsearch/satefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch
spec:
  serviceName: es-cluster
  replicas: 1
  selector:
    matchLabels:
      app: elasticsearch
  template:
    metadata:
      labels:
        app: elasticsearch
    spec:
      containers:
        - name: elasticsearch
          image: gcr.io/practice-384108/elasticsearch:7.6.2
          imagePullPolicy: Always
          # command: ["/bin/sh", "-c", "ls /usr/share/elasticsearch/data -al"]
          lifecycle:
            postStart:
                exec:
                  command: ["/bin/sh", "-c", "chown elasticsearch:elasticsearch /usr/share/elasticsearch/data"]
          ports:
          - containerPort: 9200
          volumeMounts:
          - name: elasticsearch-conf-volume
            mountPath: /usr/share/elasticsearch/config/elasticsearch.yml
            subPath: elasticsearch.yml
          - mountPath: /usr/share/elasticsearch/data
            name: es-data
      volumes:
        - name: elasticsearch-conf-volume
          configMap:
            name: elasticsearch-conf
  volumeClaimTemplates:
  - metadata:
      name: es-data
    spec:
      accessModes: ['ReadWriteOnce']
      storageClassName: standard
      resources:
        requests:
          storage: 1Gi
