elasticsearch/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
spec:
  selector:
    app: elasticsearch
  # type: NodePort
  ports:
    - protocol: TCP
      port: 9200
      targetPort: 9200
      # nodePort: 30000                ##30000~32767
